#12 Messaging Screen and functionalities completed.
Functions for reading and sending messages are defined. The necessary screen design has been made.

--- a/app/src/main/res/layout/activity_authorized_nav_drawer.xml
+++ b/app/src/main/res/layout/activity_authorized_nav_drawer.xml
@@ -157,7 +157,7 @@
 
     </LinearLayout>
     <LinearLayout
-        android:id="@+id/AfetBolgesi"
+        android:id="@+id/MesajKutusu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
