--- a/app/src/main/res/layout/activity_personel__progress.xml
+++ b/app/src/main/res/layout/activity_personel__progress.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/personnel_screen_drawer_layout"
    >
 
 
@@ -328,4 +329,4 @@
     </RelativeLayout>
 
 
-</LinearLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
