--- a/app/src/main/res/layout/activity_authorized_assign_team.xml
+++ b/app/src/main/res/layout/activity_authorized_assign_team.xml
@@ -1,17 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/authorized_assign_team_drawer_layout"
     android:orientation="vertical"
     android:background="#BFBFBF"
     tools:context=".Authorized_Assign_Team">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:id="@+id/bar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white">
+            <include layout="@layout/activity_tool_bar"></include>
+        </LinearLayout>
     <Space
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_weight="0"></Space>
+        android:layout_height="20dp">
+
+    </Space>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -150,7 +165,7 @@
     </LinearLayout>
     <Space
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="220dp"
         android:layout_weight="0"></Space>
 
     <LinearLayout
@@ -175,4 +190,14 @@
 
     </LinearLayout>
 
-</LinearLayout>
+
+    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/white">
+        <include
+            layout="@layout/activity_authorized_nav_drawer"/>
+    </RelativeLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
