--- a/app/src/main/res/layout/activity_authorized_create_team.xml
+++ b/app/src/main/res/layout/activity_authorized_create_team.xml
@@ -1,12 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/authorized_create_team_drawer_layout"
     android:background="#BFBFBF"
     tools:context=".Authorized_Edit_Team">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:id="@+id/bar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white">
+            <include layout="@layout/activity_tool_bar"></include>
+        </LinearLayout>
 
     <Space
         android:layout_width="match_parent"
@@ -57,7 +71,7 @@
     <ScrollView
         android:id="@+id/authorized_create_team_scrollview"
         android:layout_width="match_parent"
-        android:layout_height="450dp"
+        android:layout_height="380dp"
         android:layout_marginTop="2dp"
         android:background="#BFBFBF"
         tools:ignore="MissingConstraints">
@@ -128,16 +142,23 @@
             android:layout_weight="1"
             android:background="#000"
             android:textStyle="bold"
-            android:id="@+id/btn_returnTo_assignTeam">
+            android:id="@+id/btn_returnTo_assignTeam_fromCreateTeam">
         </Button>
         <Space
             android:layout_width="250dp"
             android:layout_height="match_parent"
             android:layout_weight="0"></Space>
 
-
-
     </LinearLayout>
 
+    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/white">
+        <include
+            layout="@layout/activity_authorized_nav_drawer"/>
+    </RelativeLayout>
 
-</LinearLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
