--- a/app/src/main/res/layout/activity_personel_nav_drawer.xml
+++ b/app/src/main/res/layout/activity_personel_nav_drawer.xml
@@ -169,7 +169,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Afet Bölgesi"
+            android:text="Takım Üyelerinin Konumu"
             android:padding="12dp"
             android:layout_marginStart="16dp"
             tools:ignore="Suspicious0dp"
