--- a/app/src/main/res/layout/activity_aut_req3.xml
+++ b/app/src/main/res/layout/activity_aut_req3.xml
@@ -80,7 +80,7 @@
         android:id="@+id/gdrBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="İsteği kaul et"
+        android:text="İsteği kabul et"
         app:backgroundTint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
