--- a/app/src/main/res/layout/activity_authorized_nav_drawer.xml
+++ b/app/src/main/res/layout/activity_authorized_nav_drawer.xml
@@ -169,14 +169,19 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Bildirim Oluştur"
+            android:text="Mesaj Kutusu"
             android:padding="12dp"
             android:layout_marginStart="16dp"
             tools:ignore="Suspicious0dp"
             android:layout_marginLeft="16dp">
 
         </TextView>
-
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="48dp"
+            android:src="@drawable/ic_message"
+            android:layout_marginRight="48dp" />
 
     </LinearLayout>
 
