--- a/app/src/main/res/layout/activity_tool_register_info.xml
+++ b/app/src/main/res/layout/activity_tool_register_info.xml
@@ -194,9 +194,11 @@
                 android:id="@+id/name3"
                 android:layout_width="393dp"
                 android:layout_height="29dp"
+                android:layout_gravity="center"
                 android:layout_marginStart="5dp"
+
                 android:layout_marginLeft="5dp"
-                android:text="  Daha önce arama kurtarma olayına katıldınız mı?"
+                android:text="      Arama kurtarma olayına katıldınız mı?"
                 android:textColor="@color/black"
                 android:textSize="17sp" />
 
@@ -248,7 +250,7 @@
                 android:layout_height="29dp"
                 android:layout_marginStart="5dp"
                 android:layout_marginLeft="5dp"
-                android:text="    İlk yardım eğitimi aldınız mı?"
+                android:text="      İlk yardım eğitimi aldınız mı?"
                 android:textColor="@color/black"
                 android:textSize="17sp" />
 
