--- a/app/src/main/res/layout/activity_authorized_create_team.xml
+++ b/app/src/main/res/layout/activity_authorized_create_team.xml
@@ -52,6 +52,7 @@
             android:textSize="20dp"
             android:textColor="#000"
             android:background="#FFF"
+            android:inputType="number"
             android:layout_weight="0.4"
             />
         <Button
